# zkml

./: .gitmodules  Cargo.toml  README.md  input.txt  justfile  pk.txt  vk.txt  weights.txt
exe/: Cargo.toml
exe/zkml/: app_config.rs  main.rs
exe/zkml/resources/: default_config.yaml
lib/: Cargo.toml  README.md
lib/examples/: luminal_use.rs
lib/src/: lib.rs  model.rs  notes.rs  scalar.rs  snark.rs  subcommands.rs  utils.rs
lib/src/integer/: mod.rs
lib/src/model/: fixed_weights.rs  lessthan_model.rs  medium_model.rs  mod.rs  tiny_model.rs  training.rs  types.rs  utils.rs
lib/src/scalar/: mod.rs
lib/src/snark/: mod.rs  scaling_helpers.rs  snark.rs
lib/src/subcommands/: client.rs  doctor.rs  packet.rs  server.rs  setup.rs
utils/src/: lib.rs
