[package]
name = "zkml"
version = "0.1.0"
edition = "2021"

[dependencies]
better-panic = "0.2.0"
utils = { path = "../utils" }
lib = { path = "../lib"}
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.9.34+deprecated"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"

[dependencies.clap]
version = "4.3.0"
features = ["cargo", "derive"]

[[bin]]
name = "zkml"
path = "zkml/main.rs"
