[package]
name = "lib"
version = "0.0.1"
authors = [""]
description = "Main"
edition = "2018"

[dependencies]
axum = "0.7.5"
reqwest = "0.12.5"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = "1.38.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.37"
# luminal = "0.2.0"
luminal = { git = "https://github.com/jafioti/luminal.git", rev = "8d36e70" }
itertools = "0.13.0"
dfdx = "0.13.0" # maybe completely unneeded
rand = "0.8.5"
better-panic = "0.2.0"
petgraph-graphml = "3.0.0"