[package]
name = "lib"
version = "0.0.1"
authors = [""]
description = "Main"
edition = "2018"

[dependencies]
axum = "0.7.5"
reqwest = "0.12.5"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = "1.38.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.37"
luminal = { git = "https://github.com/jafioti/luminal.git", rev = "ddc201e1c18be16f049d700a30e573b019d3c049" }
luminal_nn = { git = "https://github.com/jafioti/luminal.git", rev = "ddc201e1c18be16f049d700a30e573b019d3c049" }
luminal_training = { git = "https://github.com/jafioti/luminal.git", rev = "ddc201e1c18be16f049d700a30e573b019d3c049" }
itertools = "0.13.0"
dfdx = "0.13.0"            # maybe completely unneeded
rand = "0.8.5"
better-panic = "0.2.0"
human-panic = "2.0.0"
petgraph-graphml = "3.0.0"
# quickcheck = "1.0.3" # float tests
proptest = "1.5.0"

# arkworks
ark-std = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [
  "curve",
] }
ark-snark = { version = "^0.3.0", default-features = false }
ark-poly-commit = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
ark-crypto-primitives = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0", default-features = false }
ark-marlin = { version = "^0.3.0", default-features = false }
blake2 = { version = "0.9", default-features = false }